# NetHack-rust

./: .gitignore  ARCHITECTURE.md  CAMERA_SWITCHING_DEMO.md  Cargo.toml  FFI_DESIGN.md  FFI_STRATEGY.md  Makefile  NETHACK_BUILD_SETUP.md  PHASE_1B_ROADMAP.md  README.md  RENDERING_3D_FIRST.md  RENDERING_STRATEGY.md  SETUP_MANUAL.md  STRATEGY.md  setup_wasm.sh
.github/: copilot-instructions.md
crates/nethack-core/: Cargo.toml
crates/nethack-core/src/: camera.rs  dungeon.rs  game_bridge.rs  game_renderer.rs  input.rs  lib.rs  rng.rs  state.rs  world.rs
crates/nethack-desktop/: Cargo.toml
crates/nethack-desktop/src/: lib.rs  main.rs
crates/nethack-render/: Cargo.toml
crates/nethack-render/src/: lib.rs  renderer.rs  shaders.rs
crates/nethack-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
crates/nethack-sys/src/: globals.rs  lib.rs
crates/nethack-unity/: Cargo.toml
crates/nethack-unity/src/: lib.rs
crates/nethack-wasm/: Cargo.toml
crates/nethack-wasm/src/: lib.rs
crates/nethack3d/: Cargo.toml
crates/nethack3d/src/: geometry.rs  gpu.rs  lib.rs  math.rs  shader.rs  state.rs
dat/: Makefile
doc/: Makefile
docs/: ARCHITECTURE.md  GETTING_STARTED.md  LICENSE.md  README.md  WASM_BUILD.md
docs/examples/: index.html  nethack_wasm.d.ts  nethack_wasm.js  nethack_wasm_bg.wasm  wasm.html
docs/examples/demo/: nethack_wasm_bg.wasm  wasm.html
docs/examples/nethack/: index.html
docs/examples/nethack3d/: index.html  nethack3d.js  nethack3d_bg.wasm
docs/examples/nethack3d/wasm/: .gitignore  nethack3d.d.ts  nethack3d.js  nethack3d_bg.js  nethack3d_bg.wasm  nethack3d_bg.wasm.d.ts  package.json
examples/: run_server.sh  wasm.html
examples/demo/: README.md  nethack_wasm.js  nethack_wasm_bg.wasm  run_server.sh  verify.sh  wasm.html
src/: Makefile
submodules/: CHKSUMS.tmp
targets/wasm/: nethack.js
targets/wasm/wasm-data/: nhdat
util/: Makefile
