[workspace]
members = [
    "crates/nethack-sys",
    "crates/nethack-core",
    "crates/nethack-render",
    "crates/nethack-desktop",
    "crates/nethack-wasm",
    "crates/nethack-unity",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NetHack DevTeam"]
license = "NGPL"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
