[package]
name = "nethack-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
glam = { version = "0.27", features = ["serde"] }
bytemuck = { version = "1.16", features = ["derive"] }
nethack-sys = { path = "../nethack-sys" }
getrandom = { version = "0.2", features = ["js"] }
