[package]
name = "nethack-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nethack"
path = "src/main.rs"

[dependencies]
nethack-sys = { path = "../nethack-sys" }
nethack-core = { path = "../nethack-core" }
nethack-render = { path = "../nethack-render" }
wgpu = { version = "0.20", features = ["webgpu"] }
winit = { version = "0.30", features = ["rwh_06"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pollster = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.27", features = ["serde"] }
