[package]
name = "nethack-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nethack-core = { path = "../nethack-core" }
nethack-render = { path = "../nethack-render" }
nethack-sys = { path = "../nethack-sys" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "console",
] }
wgpu = { version = "0.20", features = ["webgpu"] }
wasm-bindgen-futures = "0.4"
tracing = "0.1"
getrandom = { version = "0.2", features = ["js"] }
glam = { version = "0.27", features = ["serde"] }
