[package]
name = "nethack3d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"

[dependencies.wgpu]
version = "0.19"
default-features = false
features = ["webgl", "wgsl"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
]

[profile.release]
opt-level = "z"
lto = true
